BaikalETK: Add register slicing function, acknowledgement

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "## Author: Zach Etienne\n",
     "\n",
+    "#### Special thanks to Roland Haas for help in answering many implementation questions\n",
+    "\n",
     "## This module generates `BaikalETK`, an [Einstein Toolkit](https://einsteintoolkit.org) thorn for solving Einstein's equations in the BSSN formalism, in Cartesian coordinates. It features SIMD intrinsics and OpenMP support.\n",
     "\n",
     "**Module Status:** <font color='red'><b> Not yet validated, work-in-progress </b></font>\n",
@@ -151,7 +153,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 5.32087206841 seconds.\n"
+      "Finished BSSN symbolic expressions in 6.89538788795 seconds.\n"
      ]
     }
    ],
@@ -396,14 +398,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for Ricci tensor in Cartesian coordinates.\n",
       "Generating C code for BSSN RHSs in Cartesian coordinates.\n",
+      "Generating C code for Ricci tensor in Cartesian coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen in 0.494410037994 seconds.\n",
+      "Finished gamma constraint C codegen in 0.50110077858 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Hamiltonian & momentum constraint C codegen in 12.7744271755 seconds.\n",
-      "Finished BSSN_RHS C codegen in 85.8439311981 seconds.\n",
-      "Finished Ricci C codegen in 86.2173979282 seconds.\n"
+      "Finished Hamiltonian & momentum constraint C codegen in 13.9507670403 seconds.\n",
+      "Finished BSSN_RHS C codegen in 109.407828808 seconds.\n",
+      "Finished Ricci C codegen in 113.570991039 seconds.\n"
      ]
     }
    ],
@@ -692,11 +694,22 @@
     "  OPTIONS: meta\n",
     "} \"Output ASCII art banner\"\n",
     "\n",
+    "schedule BaikalETK_RegisterSlicing at STARTUP after BaikalETK_Banner\n",
+    "{\n",
+    "  LANG: C\n",
+    "  OPTIONS: meta\n",
+    "} \"Register 3+1 slicing condition\"\n",
+    "\n",
     "schedule BaikalETK_Symmetry_registration at BASEGRID\n",
     "{\n",
     "  LANG: C\n",
     "  OPTIONS: Global\n",
     "} \"Register symmetries, the CartGrid3D way.\"\n",
+    "\n",
+    "schedule BaikalETK_zero_rhss at BASEGRID after BaikalETK_Symmetry_registration\n",
+    "{\n",
+    "  LANG: C\n",
+    "} \"Idea from Lean: set all rhs functions to zero to prevent spurious nans\"\n",
     "\n",
     "schedule BaikalETK_ADM_to_BSSN at CCTK_INITIAL after ADMBase_PostInitial\n",
     "{\n",
@@ -811,6 +824,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open(append_to_make_code_defn_list(\"RegisterSlicing.c\"),\"w\") as file:\n",
+    "    file.write(\"\"\"    \n",
+    "#include \"cctk.h\"\n",
+    "\n",
+    "#include \"Slicing.h\"\n",
+    "\n",
+    "int BaikalETK_RegisterSlicing (void)\n",
+    "{\n",
+    "  Einstein_RegisterSlicing (\"BaikalETK\");\n",
+    "  return 0;\n",
+    "}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# First the ETK banner code, proudly showing the NRPy+ banner\n",
     "import NRPy_logo as logo\n",
     "\n",
@@ -830,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +929,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Next register symmetries\n",
+    "with open(append_to_make_code_defn_list(\"zero_rhss.c\"),\"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "#include \"Symmetry.h\"\n",
+    "\n",
+    "void BaikalETK_zero_rhss(CCTK_ARGUMENTS)\n",
+    "{\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\"\"\")\n",
+    "    set_rhss_to_zero = \"\"\n",
+    "    for gf in rhs_list:\n",
+    "        set_rhss_to_zero += gf+\"[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] = 0.0;\\n\"\n",
+    "    \n",
+    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\", \"0\", \"0\"],\n",
+    "                       [\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\n",
+    "                       [\"1\",\"1\",\"1\"],\n",
+    "                        [\"#pragma omp parallel for\",\"\",\"\",],\"\",set_rhss_to_zero))\n",
+    "    file.write(\"}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -939,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1465,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BaikalETK.ipynb to latex\n",
-      "[NbConvertApp] Writing 163208 bytes to Tutorial-BaikalETK.tex\n",
+      "[NbConvertApp] Writing 173508 bytes to Tutorial-BaikalETK.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
