--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -183,7 +183,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 6.89538788795 seconds.\n"
+      "Finished BSSN symbolic expressions in 7.40160083771 seconds.\n"
      ]
     }
    ],
@@ -431,11 +431,11 @@
       "Generating C code for BSSN RHSs in Cartesian coordinates.\n",
       "Generating C code for Ricci tensor in Cartesian coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen in 0.50110077858 seconds.\n",
+      "Finished gamma constraint C codegen in 0.557063102722 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Hamiltonian & momentum constraint C codegen in 13.9507670403 seconds.\n",
-      "Finished BSSN_RHS C codegen in 109.407828808 seconds.\n",
-      "Finished Ricci C codegen in 113.570991039 seconds.\n"
+      "Finished Hamiltonian & momentum constraint C codegen in 15.0761089325 seconds.\n",
+      "Finished BSSN_RHS C codegen in 115.874049187 seconds.\n",
+      "Finished Ricci C codegen in 120.92793107 seconds.\n"
      ]
     }
    ],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,7 +1518,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 5: Code validation"
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 5: Code validation\n",
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "Here we will show plots demonstrating good agreement between `BaikalETK` and, e.g., `McLachlan` (another ETK) thorn."
    ]
   },
   {
@@ -1544,7 +1549,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BaikalETK.ipynb to latex\n",
-      "[NbConvertApp] Writing 173508 bytes to Tutorial-BaikalETK.tex\n",
+      "[NbConvertApp] Writing 182712 bytes to Tutorial-BaikalETK.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
