IllinoisGRMHD: mhdflux -- Fixed a recurring typo where the inlined_functions.C file was referred to as inline_functions.C

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_mhdflux.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_mhdflux.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "<font color='red'>**This module is currently under development**</font>\n",
     "\n",
-    "## In this tutorial module we explain how the MHD fluxes are evaluated withing IllinoisGRMHD.\n",
+    "## In this tutorial module we explain how the MHD fluxes are evaluated within IllinoisGRMHD.\n",
     "\n",
     "### Required and recommended citations:\n",
     "\n",
@@ -131,7 +131,7 @@
     "\\boxed{F^{\\rm HLL} = \\frac{c^{-}F_{r} + c^{+}F_{l} - c^{+}c^{-}\\left(U_{r} - U_{l}\\right)}{c^{+} + c^{-}}}\\ .\n",
     "$$\n",
     "\n",
-    "As we go through the implementation, we will notice that will need a lot of the functions defined within the `inline_functions.C` code file of `IllinoisGRMHD`. We will therefore explain the algorithm of each function in quite some detail, so that the reader can go through this tutorial without having to stop and read the [`inline_functions.C` tutorial module](Tutorial-IllinoisGRMHD_inline_functions.ipynb). We do encourage the reader to go through the module as well, though, since we will be presenting the math behind each function, but not the code itself."
+    "As we go through the implementation, we will notice that will need a lot of the functions defined within the `inlined_functions.C` code file of `IllinoisGRMHD`. We will therefore explain the algorithm of each function in quite some detail, so that the reader can go through this tutorial without having to stop and read the [`inlined_functions.C` tutorial module](Tutorial-IllinoisGRMHD_inlined_functions.ipynb). We do encourage the reader to go through the module as well, though, since we will be presenting the math behind each function, but not the code itself."
    ]
   },
   {
@@ -190,7 +190,7 @@
     "\n",
     "Next we compute the quantities $P_{\\rm cold}$, $\\epsilon_{\\rm cold}$, $\\frac{dP_{\\rm cold}}{d\\rho}$, $\\epsilon_{\\rm th}$, $h$, and $\\Gamma_{\\rm cold}$. We have written $\\rho_{b}\\equiv\\rho$ so that the discussion constains a notation that is slightly less cluttered with indices.\n",
     "\n",
-    "The function `compute_P_cold__eps_cold__dPcold_drho__eps_th__h__gamma_cold()` is defined within the `inline_functions.C` code file of `IllinoisGRMHD`. It currently implementes 3 different cases:\n",
+    "The function `compute_P_cold__eps_cold__dPcold_drho__eps_th__h__gamma_cold()` is defined within the `inlined_functions.C` code file of `IllinoisGRMHD`. It currently implementes 3 different cases:\n",
     "\n",
     "1. **Case 1: $\\boldsymbol{\\epsilon_{\\rm cold} = 0}$**\n",
     "\n",
@@ -268,7 +268,7 @@
     "# Step 4: Impose a speed limit and determine $u^{0}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{impose_speed_limit_output_u0}$$\n",
     "\n",
-    "We now call upon the `impose_speed_limit_output_u0()` function inside the `inline_functions.C` code file of `IllinoisGRMHD`. The basic algorithm performed by this function is summarized here. We start by evaluating the quantity\n",
+    "We now call upon the `impose_speed_limit_output_u0()` function inside the `inlined_functions.C` code file of `IllinoisGRMHD`. The basic algorithm performed by this function is summarized here. We start by evaluating the quantity\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -341,7 +341,7 @@
     "# Step 5: The magnetic field measured in the comoving fluid frame, $b^{\\mu}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{magnetic_field_comoving_frame}$$\n",
     "\n",
-    "Now we use th function `compute_smallba_b2_and_u_i_over_u0_psi4()` from the `inline_functions.C` code file of `IllinoisGRMHD`.\n",
+    "Now we use th function `compute_smallba_b2_and_u_i_over_u0_psi4()` from the `inlined_functions.C` code file of `IllinoisGRMHD`.\n",
     "\n",
     "We will need the following identities\n",
     "\n",
@@ -437,7 +437,7 @@
     "# Step 6: The minimum and maximum characteristic speeds \\[Back to [top](#toc)\\]\n",
     "$$\\label{min_max_characteristic_speeds}$$\n",
     "\n",
-    "We will now explain two different functions contained in the `inline_functions.C` code file of `IllinoisGRMHD`. These functions are `compute_v02()` and `find_cp_cm`. These functions are called with the objective of computing the minimum ($-$) and maximum ($+$) characteristic speeds at each cell interface, $c_{\\pm}^{r,l}$.\n",
+    "We will now explain two different functions contained in the `inlined_functions.C` code file of `IllinoisGRMHD`. These functions are `compute_v02()` and `find_cp_cm`. These functions are called with the objective of computing the minimum ($-$) and maximum ($+$) characteristic speeds at each cell interface, $c_{\\pm}^{r,l}$.\n",
     "\n",
     "We approximate the general GRMHD dispersion relation (eq. 27 of [Gammie & McKinney (2003)](https://arxiv.org/pdf/astro-ph/0301509.pdf)) by the simpler expression\n",
     "\n",
