BaikalETK: Add dtlapse_evolution_method so that ADMBase::Boundaries is not enabled, which slows down the evolution

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -111,10 +111,7 @@
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
-    "# FIXME: NOT CROSS-PLATFORM:\n",
-    "!rm -rf BaikalETK\n",
-    "\n",
-    "# Create directory for BaikalETK thorn & subdirectories\n",
+    "# Create directory for BaikalETK thorn & subdirectories in case they don't exist.\n",
     "outrootdir = \"BaikalETK/\"\n",
     "cmd.mkdir(os.path.join(outrootdir))\n",
     "outdir = os.path.join(outrootdir,\"src\") # Main C code output directory\n",
@@ -519,6 +516,11 @@
     "} \n",
     "\n",
     "EXTENDS CCTK_KEYWORD dtshift_evolution_method \"dtshift_evolution_method\"\n",
+    "{\n",
+    "  \"BaikalETK\" :: \"\"\n",
+    "} \n",
+    "\n",
+    "EXTENDS CCTK_KEYWORD dtlapse_evolution_method \"dtlapse_evolution_method\"\n",
     "{\n",
     "  \"BaikalETK\" :: \"\"\n",
     "} \n",
