BaikalETK: Minor rewordings for clarity

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -1269,7 +1269,7 @@
     "### Step 4.b.ii: BSSN $\\to$ ADM \\[Back to [top](#toc)\\]\n",
     "$$\\label{bssntoadm}$$\n",
     "\n",
-    "In order for `BaikalETK` to interface properly with other modules in the Einstein Toolkit, its native BSSN variables must be converted to ADM quantities. This is most useful, since even different BSSN modules adopt different variables, and `BaikalETK` certainly follows this pattern."
+    "All modules (thorns) in the Einstein Toolkit that deal with spacetime quantities do so via the core `ADMBase` module, which assumes variables are written in ADM form. Therefore, in order for `BaikalETK` to interface properly with the rest of the Toolkit, its native BSSN variables must be converted to ADM quantities."
    ]
   },
   {
@@ -1336,7 +1336,7 @@
     "### Step 4.c.i: Evaluate Ricci tensor \\[Back to [top](#toc)\\]\n",
     "$$\\label{ricci}$$\n",
     "\n",
-    "To slightly optimize the performance of `BaikalETK`'s BSSN solver, we split the computation of the complicated expressions for the Ricci tensor $\\bar{R}_{ij}$ into its own function, and then use the result when evaluating the BSSN right-hand-side (RHS) expressions."
+    "To slightly optimize the performance of `BaikalETK`'s BSSN solver, we split the computation of the [complicated expressions for the Ricci tensor $\\\\bar{R}_{ij}$](Tutorial-BSSN_quantities.ipynb#rbar) into its own function, and then use the result when evaluating the BSSN right-hand-side (RHS) expressions."
    ]
   },
   {
