--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/mhdflux.C\n"
+      "Overwriting ../src/mhdflux.C\n"
      ]
     }
    ],
@@ -789,16 +789,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-09-19 16:19:33--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/mhdflux.C\n",
+      "--2019-09-20 10:47:14--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/mhdflux.C\n",
       "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2, ...\n",
       "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 11397 (11K) [text/plain]\n",
       "Saving to: ‘../src/mhdflux-original.C’\n",
       "\n",
-      "../src/mhdflux-orig 100%[===================>]  11.13K  --.-KB/s    in 0s      \n",
+      "../src/mhdflux-orig 100%[===================>]  11.13K  --.-KB/s    in 0.001s  \n",
       "\n",
-      "2019-09-19 16:19:33 (273 MB/s) - ‘../src/mhdflux-original.C’ saved [11397/11397]\n",
+      "2019-09-20 10:47:15 (20.5 MB/s) - ‘../src/mhdflux-original.C’ saved [11397/11397]\n",
       "\n"
      ]
     }
@@ -865,7 +865,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-IllinoisGRMHD_mhdflux.pdf](Tutorial-IllinoisGRMHD_mhdflux.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means)."
+    "[Tutorial-IllinoisGRMHD__mhdflux.pdf](Tutorial-IllinoisGRMHD__mhdflux.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means)."
    ]
   },
   {
@@ -878,7 +878,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD_mhdflux.ipynb to latex\n",
-      "[NbConvertApp] Writing 67296 bytes to Tutorial-IllinoisGRMHD_mhdflux.tex\n",
+      "[NbConvertApp] Writing 67289 bytes to Tutorial-IllinoisGRMHD_mhdflux.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -892,10 +892,10 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template ../../latex_nrpy_style.tplx Tutorial-IllinoisGRMHD_mhdflux.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD_mhdflux.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD_mhdflux.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD_mhdflux.tex\n",
+    "!jupyter nbconvert --to latex --template ../../latex_nrpy_style.tplx Tutorial-IllinoisGRMHD__mhdflux.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
