SEOBNR: update root-finding function with correct indices from derivative computation (Hreal returned first).

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -519,49 +519,8 @@
       "3.673094582185492e-03\n",
       "-4.591368227731865e-03\n",
       "5.509641873278237e-03\n",
-      "Hreal = 9.944803488786624e-01\n",
-      "\n",
-      "Hreal = 9.944803488786624e-01\n",
-      "\n",
-      "Hreal = 9.944803488786624e-01\n",
-      "\n",
-      "Hreal = 9.944803488786624e-01\n",
-      "\n",
-      "Hreal = 9.944803490384889e-01\n",
-      "\n",
-      "Hreal = 9.944803490172097e-01\n",
-      "\n",
-      "Hreal = 9.944803488786654e-01\n",
-      "\n",
-      "Hreal = 2.779115232089453e+04\n",
-      "\n",
-      "Hreal = 6.134126604467292e+00\n",
-      "\n",
-      "Hreal = 9.944803490384889e-01\n",
-      "\n",
-      "Hreal = 9.944803490172097e-01\n",
-      "\n",
-      "Hreal = 9.944803488786654e-01\n",
-      "\n",
-      "Hreal = 2.779115232089453e+04\n",
-      "\n",
-      "Hreal = 6.134126604467292e+00\n",
-      "\n",
-      "Hreal = 4.287209059476714e+00\n",
-      "\n",
-      "Hreal = 3.076338535410054e+00\n",
-      "\n",
-      "Hreal = 2.231766050890204e+00\n",
-      "\n",
-      "Hreal = 1.683461992395055e+00\n",
-      "\n",
-      "Hreal = 1.260560885314705e+00\n",
-      "\n",
-      "Hreal = 1.038888010221122e+00\n",
-      "\n",
-      "False\n",
-      "The iteration is not making good progress, as measured by the \n",
-      "  improvement from the last ten iterations.\n"
+      "True\n",
+      "The solution converged.\n"
      ]
     }
    ],
@@ -601,6 +560,7 @@
     "print(\"%.15e\" % S2hat[2])\n",
     "derivs = compute_dHdq(m1, m2, eta, root_guess[0], 0., 0., 0., root_guess[1], root_guess[2], S1hat[0], S1hat[1], S1hat[2], S2hat[0], S2hat[1], S2hat[2], KK, k0, k1, k2, k3, k4, k5, k5l, dSO, dSS, tortoise)\n",
     "#TylerK: We agree with LALSuite on the value of Hreal; we should be able to check value of each derivative...\n",
+    "# compute_dHdq returns Hreal FIRST, then the derivatives in order spatial, momentum, and spin\n",
     "\n",
     "# Define the function of which we want to find the roots\n",
     "def root_func(F):\n",
@@ -616,7 +576,7 @@
     "    #print(\"dHdx = %.15e\\n\" % derivs[0])\n",
     "    #print(\"Cartesian coordinates: {%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf}\\n\" % (F[0], 0., 0., 0., F[1], F[2], S1[0], S1[1], S1[2], S2[0], S2[1], S2[2]))\n",
     "    #print(\"Cartesian derivatives: {%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf,%12.12lf}\\n\" % (derivs[0], derivs[1], derivs[2], derivs[3], derivs[4], derivs[5], derivs[6], derivs[7], derivs[8], derivs[9], derivs[10], derivs[11], derivs[12]))\n",
-    "    return [ derivs[0] + (-derivs[5]*F[2] - derivs[4]*F[1])/F[0], -derivs[5]/F[0], derivs[4]/F[0] - omega ]\n",
+    "    return [ derivs[1] + (-derivs[6]*F[2] - derivs[5]*F[1])/F[0], -derivs[6]/F[0], derivs[5]/F[0] - omega ]\n",
     "\n",
     "# Find the roots of root_func\n",
     "soln = root(root_func, root_guess, args=(), method='hybr', jac=None, tol=None, callback=None)\n",
@@ -1087,13 +1047,13 @@
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'dHdp1' is not defined",
+     "evalue": "global name 'dHdp1' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-082c9824ddef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import second derivatives of H from another function/routine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdHdpphi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdHdp1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0momega\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0md2Hdr2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0md2Hdrdpphi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dHdp1' is not defined"
+      "\u001b[0;32m<ipython-input-24-082c9824ddef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import second derivatives of H from another function/routine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdHdpphi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdHdp1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0momega\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0md2Hdr2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0md2Hdrdpphi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'dHdp1' is not defined"
      ]
     }
    ],
@@ -2049,21 +2009,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
