--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
@@ -83,7 +83,10 @@
     "# Step 0b: Load up cmdline_helper and create the directory\n",
     "import cmdline_helper as cmd\n",
     "IGM_src_dir_path = \"../src\"\n",
-    "cmd.mkdir(IGM_src_dir_path)"
+    "cmd.mkdir(IGM_src_dir_path)\n",
+    "\n",
+    "# Step 0c: Create the output file path \n",
+    "outfile_path__driver_evaluate_MHD_rhs__C = IGM_src_dir_path+\"/driver_evaluate_MHD_rhs.C\""
    ]
   },
   {
@@ -115,12 +118,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/driver_evaluate_MHD_rhs.C\n"
+      "Overwriting outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile outfile_path__driver_evaluate_MHD_rhs__C\n",
     "/*********************************************\n",
     " * Evaluate RHS of GRMHD & induction equations\n",
     " * (vector potential prescription), using the \n",
@@ -179,12 +182,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "#include \"cctk.h\"\n",
@@ -220,12 +223,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "extern \"C\" void IllinoisGRMHD_driver_evaluate_MHD_rhs(CCTK_ARGUMENTS) {\n",
@@ -274,12 +277,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  // FIXME: only for single gamma-law EOS.\n",
@@ -313,12 +316,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  // in_prims,out_prims_r, and out_prims_l are arrays of pointers to the actual gridfunctions.\n",
@@ -402,12 +405,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  // Convert ADM variables (from ADMBase) to the BSSN-based variables expected by this routine.\n",
@@ -436,12 +439,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  /* SET POINTERS TO METRIC GRIDFUNCTIONS */\n",
@@ -497,12 +500,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  // 1) First initialize {rho_star_rhs,tau_rhs,st_x_rhs,st_y_rhs,st_z_rhs} to zero\n",
@@ -543,12 +546,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "  // Here, we:\n",
     "  // 1) Compute tau_rhs extrinsic curvature terms, and\n",
@@ -581,12 +584,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "  int flux_dirn;\n",
     "  flux_dirn=1;\n",
@@ -694,12 +697,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "\n",
@@ -756,12 +759,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "  //Right and left face values of BI_CENTER are used in mhdflux computation (first to compute b^a).\n",
     "  //   Instead of reconstructing, we simply set B^x face values to be consistent with BX_STAGGER.\n",
@@ -807,12 +810,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  // Note that we have already reconstructed vx and vy along the x-direction, \n",
@@ -898,12 +901,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "  //Right and left face values of BI_CENTER are used in mhdflux computation (first to compute b^a).\n",
     "  //   Instead of reconstructing, we simply set B^y face values to be consistent with BY_STAGGER.\n",
@@ -950,12 +953,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  /*****************************************\n",
@@ -1000,12 +1003,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  int A_directionz=3;\n",
@@ -1041,12 +1044,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  // in_prims[{VYR,VYL,VZR,VZL}].gz_{lo,hi} ghostzones are not correct, so we fix \n",
@@ -1131,12 +1134,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "  // Then add fluxes to RHS for hydro variables {rho_b,P,vx,vy,vz}:\n",
     "  // This function is housed in the file: \"add_fluxes_and_source_terms_to_hydro_rhss.C\"\n",
@@ -1190,12 +1193,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "  /*****************************************\n",
     "   * COMPUTING RHS OF A_x, BOOKKEEPING NOTE:\n",
@@ -1237,12 +1240,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  int A_directionx=1;\n",
@@ -1279,12 +1282,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  // We reprise flux_dirn=1 to finish up computations of Ai_rhs's!\n",
@@ -1346,12 +1349,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "  \n",
     "\n",
     "  int A_directiony=2;\n",
@@ -1394,12 +1397,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ../src/driver_evaluate_MHD_rhs.C\n"
+      "Appending to outfile_path__driver_evaluate_MHD_rhs__C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
+    "%%writefile -a outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "\n",
     "  // Next compute psi6phi_rhs, and add gauge terms to A_i_rhs terms!\n",
@@ -1470,7 +1473,7 @@
     "# Step 4: Code validation \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
-    "First we will download the original `IllinoisGRMHD` source code."
+    "First we download the original `IllinoisGRMHD` source code and then compare it to the source code generated by this tutorial notebook."
    ]
   },
   {
@@ -1482,42 +1485,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-09-19 16:23:15--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.2, 18.205.93.1, ...\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 30160 (29K) [text/plain]\n",
-      "Saving to: ‘../src/driver_evaluate_MHD_rhs-original.C’\n",
-      "\n",
-      "../src/driver_evalu 100%[===================>]  29.45K  --.-KB/s    in 0.001s  \n",
-      "\n",
-      "2019-09-19 16:23:16 (32.7 MB/s) - ‘../src/driver_evaluate_MHD_rhs-original.C’ saved [30160/30160]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget -O $IGM_src_dir_path/driver_evaluate_MHD_rhs-original.C https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then we compare the two files and check if it passes the validation test."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Validation test for driver_evaluate_MHD_rhs.C: FAILED!\n",
       "Diff:\n",
+      "116c116\n",
+      "<   metric[ww]=phi_bssn;     ww++;\n",
+      "---\n",
+      ">   metric[ww]=phi_bssn;ww++;\n",
       "181c181\n",
       "<    *    \\partial_y F = [ F(i+1/2,j,k) - F(i-1/2,j,k) ] / dx\n",
       "---\n",
@@ -1526,6 +1499,10 @@
       "<    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\n",
       "---\n",
       ">    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\n",
+      "236c236\n",
+      "< \n",
+      "---\n",
+      ">     \n",
       "243c243\n",
       "<    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\n",
       "---\n",
@@ -1539,33 +1516,55 @@
       "<    * (i+1/2,j,k-1/2)| {By_stagger_r,By_stagger_l} (see Table 1 in arXiv:1007.2848)\n",
       "---\n",
       ">    * (i-1/2,j,k-1/2)| {vxrr,vxrl,vxlr,vxll,vzrr,vzrl,vzlr,vzll}\n",
-      ">    * (i+1/2,j,k-1/2)| {Bx_stagger_r,Bx_stagger_l} (see Table 1 in arXiv:1007.2848)\n"
+      ">    * (i+1/2,j,k-1/2)| {Bx_stagger_r,Bx_stagger_l} (see Table 1 in arXiv:1007.2848)\n",
+      "471,472c471,472\n",
+      "<       }\n",
+      "<   \n",
+      "---\n",
+      ">       }  \n",
+      "> \n",
+      "532c532\n",
+      "< #include \"Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\"\n",
+      "---\n",
+      "> #include \"Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\"\n",
+      "\\ No newline at end of file\n"
      ]
     }
    ],
    "source": [
-    "# Uncommend this after diff have been resolved\n",
-    "# vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv\n",
-    "# import filecmp\n",
+    "# Verify if the code generated by this tutorial module\n",
+    "# matches the original IllinoisGRMHD source code\n",
     "\n",
-    "# if filecmp.cmp('driver_evaluate_MHD_rhs.C',\n",
-    "#                'driver_evaluate_MHD_rhs-validation.C') == False:\n",
-    "#     print(\"ERROR: driver_evaluate_MHD_rhs.C validation FAILED!\")\n",
-    "#     exit(1)\n",
-    "# else:\n",
-    "#     print(\"driver_evaluate_MHD_rhs.C validation PASSED!\")\n",
-    "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-    "# Uncommend this after diff have been resolved\n",
+    "# First download the original IllinoisGRMHD source code\n",
+    "import urllib\n",
+    "from os import path\n",
     "\n",
-    "Validation__driver_evaluate_MHD_rhs__C  = !diff -w $IGM_src_dir_path/driver_evaluate_MHD_rhs-original.C $IGM_src_dir_path/driver_evaluate_MHD_rhs.C\n",
-    "        \n",
-    "if Validation__driver_evaluate_MHD_rhs__C == []:\n",
-    "    print(\"Validation test for driver_evaluate_MHD_rhs.C: PASSED!\")\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C\"\n",
+    "original_IGM_file_name = \"driver_evaluate_MHD_rhs-original.C\"\n",
+    "original_IGM_file_path = IGM_src_dir_path+\"/\"+original_IGM_file_name\n",
+    "urllib.urlretrieve(original_IGM_file_url,original_IGM_file_path)\n",
+    "\n",
+    "# Check if the downloaded file exists\n",
+    "# If it doesn't, error out\n",
+    "if not path.exists(original_IGM_file_path):\n",
+    "    print(\"Error, file \"+original_IGM_file_path+\" not found.\")\n",
+    "\n",
+    "# If it does, perform validation\n",
     "else:\n",
-    "    print(\"Validation test for driver_evaluate_MHD_rhs.C: FAILED!\")\n",
-    "    print(\"Diff:\")\n",
-    "    for diff_line in Validation__driver_evaluate_MHD_rhs__C:\n",
-    "        print(diff_line)"
+    "    Validation__driver_evaluate_MHD_rhs__C  = !diff $original_IGM_file_path $outfile_path__driver_evaluate_MHD_rhs__C\n",
+    "\n",
+    "    if Validation__driver_evaluate_MHD_rhs__C == []:\n",
+    "        # If the validation passes, we do not need to store the original IGM source code file\n",
+    "        !rm $original_IGM_file_path\n",
+    "        print(\"Validation test for driver_evaluate_MHD_rhs.C: PASSED!\")\n",
+    "    else:\n",
+    "        # If the validation fails, we keep the original IGM source code file\n",
+    "        print(\"Validation test for driver_evaluate_MHD_rhs.C: FAILED!\")\n",
+    "        # We also print out the difference between the code generated\n",
+    "        # in this tutorial module and the original IGM source code\n",
+    "        print(\"Diff:\")\n",
+    "        for diff_line in Validation__driver_evaluate_MHD_rhs__C:\n",
+    "            print(diff_line)"
    ]
   },
   {
@@ -1583,15 +1582,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb to latex\n",
-      "[NbConvertApp] Writing 113687 bytes to Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.tex\n",
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb to latex\n",
+      "[NbConvertApp] Writing 116270 bytes to Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
