--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__inlined_functions.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__inlined_functions.ipynb
@@ -74,7 +74,10 @@
     "# Step 0b: Load up cmdline_helper and create the directory\n",
     "import cmdline_helper as cmd\n",
     "IGM_src_dir_path = \"../src\"\n",
-    "cmd.mkdir(IGM_src_dir_path)"
+    "cmd.mkdir(IGM_src_dir_path)\n",
+    "\n",
+    "# Step 0c: Create the output file path \n",
+    "outfile_path__inlined_functions__C = IGM_src_dir_path+\"/inlined_functions.C\""
    ]
   },
   {
@@ -121,7 +124,7 @@
     }
    ],
    "source": [
-    "%%writefile $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile $outfile_path__inlined_functions__C\n",
     "static inline CCTK_REAL fasterpow_ppm_reconstruct(CCTK_REAL inputvar,CCTK_REAL inputpow) {\n",
     "  if(inputpow==2.0) return SQR(inputvar);\n",
     "  return pow(inputvar,inputpow);\n",
@@ -190,7 +193,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "static inline void find_cp_cm(CCTK_REAL &cplus,CCTK_REAL &cminus,CCTK_REAL v02,CCTK_REAL u0,\n",
@@ -258,7 +261,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "  //Find cplus, cminus:\n",
@@ -350,7 +353,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "static inline void compute_v02(CCTK_REAL dPcold_drho,CCTK_REAL gamma_th,CCTK_REAL eps_th,CCTK_REAL h,CCTK_REAL *smallb,CCTK_REAL *U,  CCTK_REAL &v02L) {\n",
@@ -386,7 +389,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "  /* v_A = Alfven speed = sqrt( b^2/(rho0 h + b^2) ) */\n",
     "  CCTK_REAL v_A_squared = smallb[SMALLB2]/(smallb[SMALLB2] + U[RHOB]*(h));"
@@ -417,7 +420,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "  v02L = v_A_squared + c_s_squared*(1.0-v_A_squared);\n",
     "}"
@@ -458,7 +461,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "static inline void compute_P_cold__eps_cold__dPcold_drho__eps_th__h__gamma_cold(CCTK_REAL *U, eos_struct &eos,\n",
@@ -516,7 +519,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "  CCTK_REAL U_RHOB_inv = 1.0/U[RHOB];\n",
@@ -591,7 +594,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "  // See comments above for the eos.neos==1 case for relevant \n",
@@ -665,7 +668,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "// b_x = g_{\\mu x} b^{\\mu}\n",
@@ -728,7 +731,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "static inline void impose_speed_limit_output_u0(CCTK_REAL *METRIC,CCTK_REAL *U,CCTK_REAL psi4,CCTK_REAL ONE_OVER_LAPSE,output_stats &stats, CCTK_REAL &u0_out) {\n",
@@ -779,7 +782,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "  /*** Limit velocity to GAMMA_SPEED_LIMIT ***/\n",
@@ -825,7 +828,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "  // A = 1.0-one_minus_one_over_alpha_u0_squared = 1-(1-1/(al u0)^2) = 1/(al u0)^2\n",
@@ -880,7 +883,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "static inline void enforce_pressure_floor_ceiling(output_stats &stats,CCTK_REAL kpoly,CCTK_REAL P_cold,CCTK_REAL Psi6,const CCTK_REAL Psi6threshold,CCTK_REAL rho_b,const CCTK_REAL rhobatm,  CCTK_REAL &P) {\n",
@@ -922,7 +925,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "  //CCTK_REAL P_max = 10.0*P_cold;\n",
@@ -991,7 +994,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "static inline void compute_smallba_b2_and_u_i_over_u0_psi4(CCTK_REAL *METRIC,CCTK_REAL *METRIC_LAP_PSI4,CCTK_REAL *U,CCTK_REAL u0L,CCTK_REAL ONE_OVER_LAPSE_SQRT_4PI,  \n",
@@ -1045,7 +1048,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "  // Eq. 24 in http://arxiv.org/pdf/astro-ph/0503420.pdf:\n",
     "  // b^i = B^i_u / sqrt(4 pi)\n",
@@ -1092,7 +1095,7 @@
     }
    ],
    "source": [
-    "%%writefile -a $IGM_src_dir_path/inlined_functions.C\n",
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
     "  // b^2 = g_{\\mu \\nu} b^{\\mu} b^{\\nu}\n",
@@ -1125,34 +1128,7 @@
     "# Step 10: Code validation \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
-    "First we will download the original `IllinoisGRMHD` source code."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2019-09-20 10:47:43--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/inlined_functions.C\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2, ...\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\n",
-      "HTTP request sent, awaiting response... "
-     ]
-    }
-   ],
-   "source": [
-    "!wget -O $IGM_src_dir_path/inlined_functions-original.C https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/inlined_functions.C"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then we compare the two files and check if it passes the validation test."
+    "First we download the original `IllinoisGRMHD` source code and then compare it to the source code generated by this tutorial notebook."
    ]
   },
   {
@@ -1174,28 +1150,39 @@
     }
    ],
    "source": [
-    "# Uncommend this after diff have been resolved\n",
-    "# vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv\n",
-    "# import filecmp\n",
+    "# Verify if the code generated by this tutorial module\n",
+    "# matches the original IllinoisGRMHD source code\n",
     "\n",
-    "# if filecmp.cmp('driver_evaluate_MHD_rhs.C',\n",
-    "#                'driver_evaluate_MHD_rhs-validation.C') == False:\n",
-    "#     print(\"ERROR: driver_evaluate_MHD_rhs.C validation FAILED!\")\n",
-    "#     exit(1)\n",
-    "# else:\n",
-    "#     print(\"driver_evaluate_MHD_rhs.C validation PASSED!\")\n",
-    "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-    "# Uncommend this after diff have been resolved\n",
+    "# First download the original IllinoisGRMHD source code\n",
+    "import urllib\n",
+    "from os import path\n",
     "\n",
-    "Validation__inlined_functions__C  = !diff $IGM_src_dir_path/inlined_functions-original.C $IGM_src_dir_path/inlined_functions.C\n",
-    "        \n",
-    "if Validation__inlined_functions__C == []:\n",
-    "    print(\"Validation test for inlined_functions.C: PASSED!\")\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/inlined_functions.C\"\n",
+    "original_IGM_file_name = \"inlined_functions-original.C\"\n",
+    "original_IGM_file_path = IGM_src_dir_path+\"/\"+original_IGM_file_name\n",
+    "urllib.urlretrieve(original_IGM_file_url,original_IGM_file_path)\n",
+    "\n",
+    "# Check if the downloaded file exists\n",
+    "# If it doesn't, error out\n",
+    "if not path.exists(original_IGM_file_path):\n",
+    "    print(\"Error, file \"+original_IGM_file_path+\" not found.\")\n",
+    "\n",
+    "# If it does, perform validation\n",
     "else:\n",
-    "    print(\"Validation test for inlined_functions.C: FAILED!\")\n",
-    "    print(\"Diff:\")\n",
-    "    for diff_line in Validation__inlined_functions__C:\n",
-    "        print(diff_line)"
+    "    Validation__inlined_functions__C  = !diff $original_IGM_file_path $outfile_path__inlined_functions__C\n",
+    "\n",
+    "    if Validation__inlined_functions__C == []:\n",
+    "        # If the validation passes, we do not need to store the original IGM source code file\n",
+    "        !rm $original_IGM_file_path\n",
+    "        print(\"Validation test for inlined_functions.C: PASSED!\")\n",
+    "    else:\n",
+    "        # If the validation fails, we keep the original IGM source code file\n",
+    "        print(\"Validation test for inlined_functions.C: FAILED!\")\n",
+    "        # We also print out the difference between the code generated\n",
+    "        # in this tutorial module and the original IGM source code\n",
+    "        print(\"Diff:\")\n",
+    "        for diff_line in Validation__inlined_functions__C:\n",
+    "            print(diff_line)"
    ]
   },
   {
@@ -1220,8 +1207,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD_inlined_functions.ipynb to latex\n",
-      "[NbConvertApp] Writing 84844 bytes to Tutorial-IllinoisGRMHD_inlined_functions.tex\n",
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__inlined_functions.ipynb to latex\n",
+      "[NbConvertApp] Writing 85667 bytes to Tutorial-IllinoisGRMHD__inlined_functions.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
