GiRaFFE: The last major revisions to the Stilde flux function.

--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -89,14 +89,27 @@
     "thismodule = \"GiRaFFE_NRPy_Ccode_library-Stilde-flux\"\n",
     "\n",
     "# These are the standard gridfunctions we've used before.\n",
-    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gammaDD\", \"sym01\",DIM=3)\n",
-    "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"betaU\",DIM=3)\n",
-    "alpha   = gri.register_gridfunctions(\"AUXEVOL\",\"alpha\")\n",
+    "#gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gammaDD\", \"sym01\",DIM=3)\n",
+    "#betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"betaU\",DIM=3)\n",
+    "#alpha   = gri.register_gridfunctions(\"AUXEVOL\",\"alpha\")\n",
     "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"ValenciavU\",DIM=3)\n",
     "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\",DIM=3)\n",
     "BU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"BU\",DIM=3)\n",
-    "gammaUU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gammaUU\", \"sym01\",DIM=3)\n",
-    "gammadet = ixp.gri.register_gridfunctions(\"AUXEVOL\",\"gammadet\")\n",
+    "#gammaUU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gammaUU\", \"sym01\",DIM=3)\n",
+    "#gammadet = ixp.gri.register_gridfunctions(\"AUXEVOL\",\"gammadet\")\n",
+    "\n",
+    "# We will pass values of the gridfunction on the cell faces into the function. This requires us\n",
+    "# to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
+    "[gamma_faceDD00,gamma_faceDD01,gamma_faceDD02] = par.Cparameters((\"REAL\", thismodule,[\"gamma_faceDD00\",\"gamma_faceDD01\",\"gamma_faceDD02\"], 1e300))\n",
+    "[gamma_faceDD11,gamma_faceDD12,gamma_faceDD22] = par.Cparameters((\"REAL\", thismodule,[\"gamma_faceDD11\",\"gamma_faceDD12\",\"gamma_faceDD22\"], 1e300))\n",
+    "[gamma_faceUU00,gamma_faceUU01,gamma_faceUU02] = par.Cparameters((\"REAL\", thismodule,[\"gamma_faceUU00\",\"gamma_faceUU01\",\"gamma_faceUU02\"], 1e300))\n",
+    "[gamma_faceUU11,gamma_faceUU12,gamma_faceUU22] = par.Cparameters((\"REAL\", thismodule,[\"gamma_faceUU11\",\"gamma_faceUU12\",\"gamma_faceUU22\"], 1e300))\n",
+    "[beta_faceU0,beta_faceU1,beta_faceU2] = par.Cparameters((\"REAL\", thismodule,[\"beta_faceU0\",\"beta_faceU1\",\"beta_faceU2\"], 1e300))\n",
+    "alpha_face = par.Cparameters((\"REAL\", thismodule,\"alpha_face\", 1e300))\n",
+    "gammadet_face = par.Cparameters((\"REAL\", thismodule,\"gammadet_face\", 1e300))\n",
+    "gamma_faceDD = ixp.declarerank2(\"gamma_faceDD\",\"sym01\")\n",
+    "gamma_faceUU = ixp.declarerank2(\"gamma_faceUU\",\"sym01\")\n",
+    "beta_faceU = ixp.declarerank2(\"beta_faceU\")\n",
     "\n",
     "# We'll need some more gridfunctions, now, to represent the reconstructions of BU and ValenciavU\n",
     "Valenciav_rU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_rU\",DIM=3)\n",
@@ -161,11 +174,26 @@
     "//-----------------------------------------------------------------------------\n",
     "// Compute the flux for advecting S_i .\n",
     "//-----------------------------------------------------------------------------\n",
-    "static inline void GRFFE__S_i__flux(const int i0,const int i1,const int i2,const int flux_dirn, REAL *Ul, REAL *Ur, REAL *FACEVAL,const REAL *FACEVAL_LAPSE_PSI4,\n",
+    "static inline void GRFFE__S_i__flux(const int i0,const int i1,const int i2,const int flux_dirn, REAL *Ul, REAL *Ur, \n",
+    "                                    REAL *FACEVAL,const REAL *FACEVAL_LAPSE_PSI4,\n",
     "                                    REAL &cmax,REAL &cmin,\n",
     "                                    REAL &st_x_flux,REAL &st_y_flux,REAL &st_z_flux) {\n",
     "\n",
     "  int idx = IDX3(i0,i1,i2);\n",
+    "  gamma_faceDD00 = FACEVAL[GXX];\n",
+    "  gamma_faceDD01 = FACEVAL[GXY];\n",
+    "  gamma_faceDD02 = FACEVAL[GXZ];\n",
+    "  gamma_faceDD11 = FACEVAL[GYY];\n",
+    "  gamma_faceDD12 = FACEVAL[GYZ];\n",
+    "  gamma_faceDD22 = FACEVAL[GZZ];\n",
+    "  gamma_faceUU00 = FACEVAL[GUPXX];\n",
+    "  gamma_faceUU11 = FACEVAL[GUPYY];\n",
+    "  gamma_faceUU22 = FACEVAL[GUPZZ];\n",
+    "  beta_faceU0 = FACEVAL[SHIFTX];\n",
+    "  beta_faceU0 = FACEVAL[SHIFTY];\n",
+    "  beta_faceU0 = FACEVAL[SHIFTZ];\n",
+    "  alpha_face = FACEVAL_LAPSE_PSI4[LAPSE]\n",
+    "  gammadet_face = FACEVAL_LAPSE_PSI4[PSI6]\n",
     "\"\"\""
    ]
   },
@@ -176,11 +204,11 @@
    "outputs": [],
    "source": [
     "# Conveniently, we store the metric determinant gamma directly.\n",
-    "alpha_sqrt_gamma = alpha*sp.sqrt(gammadet)\n",
+    "alpha_sqrt_gamma = alpha_face*sp.sqrt(gammadet_face)\n",
     "\n",
     "# We'll also compute some powers of the conformal factor psi:\n",
     "# Since psi^6 = gammadet,\n",
-    "psi = gammadet**(1.0/6.0)\n",
+    "psi = gammadet_face**(1.0/6.0)\n",
     "psim4 = 1.0/(psi**4.0)"
    ]
   },
@@ -209,7 +237,7 @@
     "### Step 1.b: Speed-limit the velocities \\[Back to [top](#toc)\\]\n",
     "$$\\label{speed_limit}$$\n",
     "\n",
-    "Next, we compute the speed-limited velocities on the faces. This function is found in `inlined_functions.C`, and will be documented elsewhere **(TODO: link)**. This function also counts how often the speed had to be limited."
+    "Next, we compute the speed-limited velocities on the faces. This function is found in `inlined_functions.C`, however, we will replace it with our own that does the same thing (and is already compatible with the rest of our code). The original function also counts how often the speed had to be limited."
    ]
   },
   {
@@ -221,14 +249,18 @@
     "Stilde_flux_string_pre += \"\"\"\n",
     "  //Compute face velocities\n",
     "  // Begin by computing u0\n",
-    "  output_stats stats; stats.failure_checker=0;\n",
+    "  //output_stats stats; stats.failure_checker=0;\n",
     "  REAL u0_r,u0_l;\n",
     "  //impose_speed_limit_output_u0(FACEVAL,Ur,psi4,ONE_OVER_LAPSE,stats,u0_r);\n",
     "  pointwisecalc_u0(auxevol_gfs[IDX4pt(VALENCIAV_RU0,idx)],auxevol_gfs[IDX4pt(VALENCIAV_RU1,idx)],\n",
-    "                               auxevol_gfs[IDX4pt(VALENCIAV_RU2,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_R,idx)])\n",
+    "                               auxevol_gfs[IDX4pt(VALENCIAV_RU2,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_R,idx)],\n",
+    "                               gamma_faceDD00,gamma_faceDD01,gamma_faceDD02,gamma_faceDD11,gamma_faceDD12,gamma_faceDD22,\n",
+    "                               alpha_face,idx)\n",
     "  //impose_speed_limit_output_u0(FACEVAL,Ul,psi4,ONE_OVER_LAPSE,stats,u0_l);\n",
     "  pointwisecalc_u0(auxevol_gfs[IDX4pt(VALENCIAV_LU0,idx)],auxevol_gfs[IDX4pt(VALENCIAV_LU1,idx)],\n",
-    "                               auxevol_gfs[IDX4pt(VALENCIAV_LU2,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_L,idx)])\n",
+    "                               auxevol_gfs[IDX4pt(VALENCIAV_LU2,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_L,idx)],\n",
+    "                               gamma_faceDD00,gamma_faceDD01,gamma_faceDD02,gamma_faceDD11,gamma_faceDD12,gamma_faceDD22,\n",
+    "                               alpha_face,idx)\n",
     "\"\"\""
    ]
   },
@@ -241,8 +273,8 @@
     "# TODO: include our u0 calculator in a form that can operate on l/r faces\n",
     "Stilde_flux_string_pre = \"\"\"\n",
     "static inline void pointwisecalc_u0(int &ValenciavU0,int &ValenciavU1, int &ValenciavU2, int &u0,\n",
-    "                                    // Still need to decide how to handle interped metric quantities.\n",
-    "                                    const int idx) {\n",
+    "                                    const REAL gammaDD00,const REAL gammaDD01,const REAL gammaDD02,const REAL gammaDD11,const REAL gammaDD12,const REAL gammaDD22,\n",
+    "                                    const REAL alpha,const int idx) {\n",
     "    #include \"../computeu0_Cfunction.h\"\n",
     "}\n",
     "\n",
@@ -307,7 +339,7 @@
     "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0b\n",
     "\n",
     "# LEFT\n",
-    "u0b.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,Valenciav_lU,B_lU)\n",
+    "u0b.compute_u0_smallb_Poynting__Cartesian(gamma_faceDD,beta_faceU,alpha_face,Valenciav_lU,B_lU)\n",
     "u_lD = ixp.zerorank1()\n",
     "u_lU = ixp.zerorank1()\n",
     "u4upperZero_l = gri.register_gridfunctions(\"AUXEVOL\",\"u4upperZero_l\")\n",
@@ -325,7 +357,7 @@
     "smallb2_l = u0b.smallb2etk.subs(u0b.u0,u4upperZero_l)\n",
     "\n",
     "# RIGHT\n",
-    "u0b.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,Valenciav_rU,B_rU)\n",
+    "u0b.compute_u0_smallb_Poynting__Cartesian(gamma_faceDD,beta_faceU,alpha_face,Valenciav_rU,B_rU)\n",
     "u_rD = ixp.zerorank1()\n",
     "u_rU = ixp.zerorank1()\n",
     "u4upperZero_r = gri.register_gridfunctions(\"AUXEVOL\",\"u4upperZero_r\")\n",
@@ -705,7 +737,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, now that we have the equations written, we can write out the files. After writing a brief post string (to close the function), we will loop over `flux_dirn`, creating one C file for each flux direction. In each file, we will include the math to calculate each momentum-flux component `mom_comp` in that direction."
+    "Finally, now that we have the equations written, we can write out the files. After writing a brief post string (to close the function), we will loop over `flux_dirn`, creating one C file for each flux direction. In each file, we will include the math to calculate each momentum-flux component `mom_comp` in that direction.\n",
+    "\n",
+    "However, we have written "
    ]
   },
   {
@@ -732,7 +766,7 @@
     "    Stilde_flux_kernel = fin.FD_outputC(\"returnstring\",Stilde_flux_to_print,params=\"outCverbose=False\")\n",
     "    out_string += Stilde_flux_kernel\n",
     "    out_string += Stilde_flux_string_post\n",
-    "    with open(os.path.join(outdir,\"GRFFE__S_\"+str(flux_dirn)+\"_flux.C\"), \"w\") as file:\n",
+    "    with open(os.path.join(outdir,\"GRFFE__S_\"+str(flux_dirn)+\"__flux.C\"), \"w\") as file:\n",
     "        file.write(out_string)\n"
    ]
   },
@@ -847,7 +881,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb to latex\n",
-      "[NbConvertApp] Writing 81045 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
+      "[NbConvertApp] Writing 82450 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
